--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ flutter:
 
   uses-material-design: true
   assets:
-    - assets/
+    - assets/logo/
+    - assets/icon/
 
 flutter_launcher_icons:
   android: "launcher_icon"
